<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_gravity="center_vertical"
        android:layout_weight="5"
        android:layout_marginTop = "100dp"
        android:layout_marginBottom ="100dp"
        android:orientation="horizontal">

        <FrameLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_gravity="center_vertical"
            android:layout_marginRight="@dimen/use_imageview_marginleft_size"
            android:layout_weight="2">

            <ImageView
                android:id="@+id/user_photo"
                android:layout_width="312dp"
                android:layout_height="312dp"
                android:layout_gravity="right"
                android:scaleType="fitXY"/>
        </FrameLayout>

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_gravity="center_vertical"
            android:layout_weight="2"
            android:layout_marginLeft="@dimen/use_imageview_marginleft_size"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/station_department"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:textColor="@android:color/black"
                    android:text="@string/station_department"
                    android:textSize="@dimen/use_title_text_size" />

                <TextView
                    android:id="@+id/station_department_value"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:textColor="@android:color/black"
                    android:singleLine="true"
                    android:layout_marginLeft="@dimen/use_title_marginleft_size"
                    android:textSize="@dimen/use_title_text_size" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/station_title"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:textColor="@android:color/black"
                    android:text="@string/station_title"
                    android:textSize="@dimen/use_title_text_size" />

                <TextView
                    android:id="@+id/station_title_value"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:textColor="@android:color/black"
                    android:layout_marginLeft="@dimen/use_title_marginleft_size"
                    android:textSize="@dimen/use_title_text_size" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/station_name"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:textColor="@android:color/black"
                    android:text="@string/station_name"
                    android:textSize="@dimen/use_title_text_size" />

                <TextView
                    android:id="@+id/station_name_value"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:textColor="@android:color/black"
                    android:layout_marginLeft="@dimen/use_title_marginleft_size"
                    android:textSize="@dimen/use_title_text_size" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/station_email"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:textColor="@android:color/black"
                    android:text="@string/station_email"
                    android:textSize="@dimen/use_title_text_size" />

                <TextView
                    android:id="@+id/station_email_value"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:textColor="@android:color/black"
                    android:layout_marginLeft="@dimen/use_title_marginleft_size"
                    android:textSize="@dimen/use_title_text_size" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/station_phone"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:textColor="@android:color/black"
                    android:text="@string/station_phone"
                    android:textSize="@dimen/use_title_text_size" />

                <TextView
                    android:id="@+id/station_phone_value"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:textColor="@android:color/black"
                    android:layout_marginLeft="@dimen/use_title_marginleft_size"
                    android:textSize="@dimen/use_title_text_size" />
            </LinearLayout>
        </LinearLayout>
    </LinearLayout>
</FrameLayout>