<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/white"
    android:orientation="vertical" >

    <FrameLayout
        android:layout_width="fill_parent"
        android:layout_height="0dp"
        android:layout_weight="1.2"
        android:background="@android:color/background_dark">

        <TextView
            android:id="@+id/station_time"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical|left"
            android:layout_marginLeft="@dimen/station_title_time_marginleft_size"
            android:text="@string/use_date_time"
            android:textColor="@android:color/white"
            android:textSize="@dimen/station_title_time_text_size" />

        <TextView
            android:id="@+id/station_date"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical|right"
            android:layout_marginRight="@dimen/station_title_time_marginleft_size"
            android:text="@string/use_date"
            android:textColor="@android:color/white"
            android:textSize="@dimen/station_title_time_text_size"/>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_gravity="center"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/smarkbox_light"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_marginRight="15dp"
                android:textColor="@android:color/darker_gray"
                android:textSize="24sp" />

            <TextView
                android:id="@+id/smarkbox_temp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:textColor="@android:color/darker_gray"
                android:textSize="24sp" />

            <TextView
                android:id="@+id/smarkbox_hum"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_marginLeft="15dp"
                android:textColor="@android:color/darker_gray"
                android:textSize="24sp" />
        </LinearLayout>
    </FrameLayout>

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="0dp"
        android:layout_weight="2.4"
        android:background="@android:color/darker_gray"
        android:orientation="horizontal">

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="fill_parent"
            android:layout_weight="1"
            android:gravity="center"
            android:orientation="vertical">

            <TextView
                android:id="@+id/station_num"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:layout_marginTop="15dp"
                android:layout_weight="1"
                android:textColor="@android:color/black"
                android:text="@string/station_num"
                android:textSize="@dimen/station_title_time_text_size" />

            <TextView
                android:id="@+id/station_num_bis"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center"
                android:layout_marginBottom="15dp"
                android:textStyle="bold"
                android:textColor="@android:color/black"
                android:textSize="@dimen/station_title_time_text_size" />
        </LinearLayout>

        <View
            android:layout_width="1dp"
            android:layout_height="fill_parent"
            android:layout_marginBottom="20dp"
            android:layout_marginTop="20dp"
            android:background="@android:color/background_dark">
        </View>

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="fill_parent"
            android:layout_weight="1"
            android:gravity="center"
            android:orientation="vertical">

            <TextView
                android:id="@+id/station_state"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:layout_marginTop="15dp"
                android:layout_weight="1"
                android:textColor="@android:color/black"
                android:textSize="@dimen/station_title_time_text_size"
                android:text="@string/station_state" />

            <TextView
                android:id="@+id/station_state_time"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center"
                android:layout_marginBottom="15dp"
                android:textStyle="bold"
                android:textColor="@android:color/black"
                android:textSize="@dimen/station_title_time_text_size"
                android:text="@string/station_use_state" />
        </LinearLayout>
    </LinearLayout>

    <FrameLayout
        android:id="@+id/station_fragment_content"
        android:layout_width="fill_parent"
        android:layout_height="0dp"
        android:layout_gravity="center"
        android:layout_weight="8.5" >


        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="100dp"
            android:layout_gravity="bottom"
            android:orientation="vertical">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_marginLeft="30dp"
                android:layout_marginRight="30dp"
                android:layout_marginBottom="20dp"
                android:layout_gravity="bottom"
                android:orientation="horizontal">

                <ImageView
                    android:id="@+id/lock_right"
                    android:layout_marginRight="10dp"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_weight="1"/>
                <ImageView
                    android:id="@+id/usb0_right"
                    android:layout_marginRight="10dp"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_weight="1"/>
                <ImageView
                    android:id="@+id/usb1_right"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_weight="1"/>
                <ImageView
                    android:id="@+id/usb2_right"
                    android:layout_marginLeft="10dp"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_weight="1"/>
                <ImageView
                    android:id="@+id/usb3_right"
                    android:layout_marginLeft="10dp"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_weight="1"/>
            </LinearLayout>
        </FrameLayout>
    </FrameLayout>

</LinearLayout>